RESOLVED FIXED210649
[JSC] Map/Set iterator creation functions should fail with BadType etc. before executing insertChecks
https://bugs.webkit.org/show_bug.cgi?id=210649
Summary [JSC] Map/Set iterator creation functions should fail with BadType etc. befor...
Yusuke Suzuki
Reported 2020-04-17 04:20:39 PDT
[JSC] Map/Set iterator creation functions should fail with BadType etc. before executing insertChecks
Attachments
Patch (3.84 KB, patch)
2020-04-17 04:22 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-04-17 04:22:17 PDT
Yusuke Suzuki
Comment 2 2020-04-17 04:22:20 PDT
Mark Lam
Comment 3 2020-04-17 07:37:21 PDT
Comment on attachment 396754 [details] Patch r=me
EWS
Comment 4 2020-04-17 07:41:44 PDT
Committed r260248: <https://trac.webkit.org/changeset/260248> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396754 [details].
Note You need to log in before you can comment on or make changes to this bug.