[JSC] Map/Set iterator creation functions should fail with BadType etc. before executing insertChecks https://bugs.webkit.org/show_bug.cgi?id=210649 <rdar://problem/61925452>

Reviewed by Mark Lam.

JSTests:

* stress/map-iterator-check-before-fail.js: Added.
(test):
* stress/set-iterator-check-before-fail.js: Added.
(set new):
(set var):

Source/JavaScriptCore:

Since insertChecks adds some DFG nodes, we should determine whether this intrinsic handling is OK or not before executing insertChecks.
Otherwise, we will hit an assertion with `!didInsertChecks`.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleIntrinsicCall):


Canonical link: https://commits.webkit.org/223521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260248 268f45cc-cd09-0410-ab3c-d52691b4dbfc