Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp
@@ -3188,10 +3188,10 @@ bool ByteCodeParser::handleIntrinsicCall(Node* callee, VirtualRegister result, I
         case JSMapValuesIntrinsic:
         case JSSetEntriesIntrinsic:
         case JSSetValuesIntrinsic: {
-            insertChecks();
-
             if (m_inlineStackTop->m_exitProfile.hasExitSite(m_currentIndex, BadCell) || m_inlineStackTop->m_exitProfile.hasExitSite(m_currentIndex, BadType))
                 return false;
+
+            insertChecks();
 
             IterationKind kind = IterationKind::Values;
             UseKind useKind = MapObjectUse;
